<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/details_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_white">



    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout2"
        app:layout_anchorGravity="center">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="profile image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/roses" />

        <ImageView
            android:id="@+id/Up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contentDescription="back button"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="@id/profile_image"

            app:layout_constraintTop_toTopOf="@+id/profile_image"
            android:focusable="true" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/profile_image"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/withe"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@id/profile_image"
            tools:text="Link profil name" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"

            app:cardCornerRadius="5dp"
            app:layout_anchor="@+id/constraintLayout2"
            app:layout_anchorGravity="center"
            app:layout_constraintBottom_toTopOf="@+id/cardview2"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/profile_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:text="Link profil name"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true"

                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_name2" />

                <ImageView
                    android:id="@+id/vector_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/top_margin"
                    android:contentDescription="map icon"
                    android:src="@drawable/ic_baseline_place_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/divider3" />

                <TextView
                    android:id="@+id/place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_left"
                    android:text="adresse localisation"
                    app:layout_constraintBottom_toBottomOf="@+id/vector_place"
                    app:layout_constraintStart_toEndOf="@+id/vector_place"
                    app:layout_constraintTop_toTopOf="@+id/vector_place" />

                <ImageView
                    android:id="@+id/vector_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/vector_place"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/top_margin"
                    android:contentDescription="phone icon"
                    android:src="@drawable/ic_baseline_phone_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vector_place" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/place"
                    android:layout_marginStart="@dimen/text_margin_left"
                    android:layout_toEndOf="@id/vector_phone"
                    android:text="link adresse localisation"
                    app:layout_constraintBottom_toBottomOf="@+id/vector_phone"
                    app:layout_constraintStart_toEndOf="@+id/vector_phone"
                    app:layout_constraintTop_toTopOf="@+id/vector_phone" />

                <ImageView
                    android:id="@+id/vector_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/vector_phone"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="link icon"
                    android:src="@drawable/ic_baseline_link_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vector_phone" />

                <TextView
                    android:id="@+id/link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone"
                    android:layout_marginStart="@dimen/text_margin_left"
                    android:layout_toEndOf="@id/vector_phone"
                    android:text="adresse réseau social"
                    app:layout_constraintBottom_toBottomOf="@+id/vector_link"
                    app:layout_constraintStart_toEndOf="@+id/vector_link"
                    app:layout_constraintTop_toTopOf="@+id/vector_link" />


            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview2"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:padding="16dp"
            app:cardCornerRadius="5dp"
            app:layout_anchor="@+id/constraintLayout2"
            app:layout_anchorGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:text="A propos de moi"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <!-- il faudra ajouter le lien vers le texte-->

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true"

                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintStart_toStartOf="@id/about"
                    app:layout_constraintTop_toBottomOf="@id/about" />

                <TextView
                    android:id="@+id/about_me"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="22dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about"
                    tools:text="About me.............................................................................................................................." />


            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingFavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="add button"
            tools:tint="@color/gold"
            app:backgroundTint="@color/withe"
            app:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="@+id/cardview"
            app:layout_constraintTop_toTopOf="@+id/cardview"
            tools:srcCompat="@drawable/ic_star_white_24dp"
            />


    </android.support.constraint.ConstraintLayout>


</ScrollView>